Version 1.8.4+svn:
 * Language and i18n:
   * Updated translations: Indonesian, Japanese

Version 1.8.4:
 * AI:
   * Fixed bug #16102: Made AI cancel attacks if a previously valid attack
     was made invalid by WML event after move in move+attack sequence.
   * Allowed custom eras to define Lua AI modifications for games played with this era.
 * Campaigns:
   * Delfadors Memoirs:
     * Fixed bug #16295: Make Lionel's portrait in Delfador's Memoirs story
       screens the same as his unit portrait since there doesn't seem to be a
       current higher-res version available
   * Descent into Darkness:
     * Made 'Alone at Last' slightly easier. Also, Dela is no longer
       invulnerable but cannot be assassinated easily.
   * Legend of Wesmere:
     * Fixed bug #16140: removed gold overlay when defeating both leaders
       (patch #1755 by Anonymissimus)
     * Reduced the difficulty of scenario 14 and improved the AI of the ally.
   * Liberty:
     * Increased the difficulty in 'Glory' by making the defenders behave more
       intelligently.
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Galician, Japanese, Serbian,
     Vietnamese
   * Fixed bug #15934: Flushed image cache when changing language
 * Miscellaneous and bug fixes:
   * Ensured graceful failure when encountering broken [advancefrom] tag.
   * Fixed bug #16219: Handled ToD areas in a LIFO way, so that it is possible
     to override them without first removing them
   * Fixed bug #16235: Avoided displaying an empty menu and therefore choosing
     a random weapon, when there is none
   * Fixed bug #16243: Added detection for server replays, as they are missing
     the core [lua] tags
   * Fixed bug #16260: Fixed attack_end event not raised for uncommon swarm
     attacks (patch #1758 by Anonymissimus)
   * Fixed bug #16261: Added test for invalidated death due to positive hp
     after the 'die' event
   * Fixed bug #16283: 1.9 syntax creeped into 1.8.x causing segfaults