@@ -39,31 +39,22 @@
         {GOLD 300 250 200}
         team_name=good
         user_team_name=_"Allies"
+        {ai/aliases/stable_singleplayer.cfg}
         [ai]
-            turns=1-3
-            recruitment_pattern=fighter,archer
-            aggression=1.0
-            caution=0.5
-            leader_value=0
-            village_value=0.0
-        [/ai]
-
-        [ai]
-            turns=4-FOREVER
-            recruitment_pattern=fighter,archer
-            aggression=0.5
-            caution=0.5
-            leader_value=0
-            village_value=0.0
-            [protect_unit]
-                type=Caravan
-                radius=1
+            {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern fighter,archer}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.5}
+            {AI_SIMPLE_ALWAYS_ASPECT caution 0.5}
+            {AI_SIMPLE_ALWAYS_ASPECT leader_value 0}
+            {AI_SIMPLE_ALWAYS_ASPECT village_value 0}
+            [goal]
+                name=protect_unit
+                [criteria]
+                    side=1
+                    type=Caravan
+                [/criteria]
                 value=7
-            [/protect_unit]
-            [avoid]
-                x=0-32,17-32
-                y=1-15,24-32
-            [/avoid]
+                protect_radius=12
+            [/goal]
         [/ai]
     [/side]
 
@@ -78,9 +69,17 @@
         facing=sw
         {RECRUIT (Elvish Fighter,Elvish Scout,Elvish Archer) (Elvish Fighter,Elvish Scout,Elvish Archer,Elvish Shaman) (Elvish Fighter,Elvish Scout,Elvish Archer,Elvish Shaman)}
         {GOLD 175 225 250}
+        {ai/aliases/stable_singleplayer.cfg}
         [ai]
-            grouping=offensive
-            passive_leader=yes
+            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT passive_leader yes}
+            [goal]
+                [criteria]
+                    side=1
+                    type=Caravan
+                [/criteria]
+                value=7
+            [/goal]
         [/ai]
     [/side]
 
